gccida/c3/load_pic_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/load_pic_register/src/i386.c:4391:52: error: use of undeclared identifier 'off_694A56'
sprintf( pic_label_name, "*.%s%u", ( const char *)&off_694A56, 0LL); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/load_pic_register/src/i386.c:4394:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/load_pic_register/src/obj/i386.o] Error 1
